Kubernetes-project/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonapp-service

spec:
  type: ClusterIP

  selector:
    app: pythonapp

  ports:
    - port: 80
      targetPort: 8080
